# felX

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICES  README.md
.github/workflows/: ci.yml
crates/felx-app/: Cargo.toml
crates/felx-app/src/: app.rs  audio_playback.rs  autosave.rs  crash_reporter.rs  curve_widget.rs  export_dialog.rs  hot_reload.rs  main.rs  manifests.rs  playback.rs  presets.rs  render_queue.rs  settings.rs
crates/felx-app/src/panels/: effects.rs  graph_editor.rs  layers.rs  masks.rs  mod.rs  transport.rs
crates/felx-cli/: Cargo.toml
crates/felx-cli/src/: main.rs
crates/felx-core/: Cargo.toml
crates/felx-core/src/: diagnostics.rs  lib.rs
crates/felx-core/src/media/: av_sync.rs  library.rs  mixer.rs  mod.rs  waveform.rs
crates/felx-core/src/model/: asset.rs  composition.rs  curve.rs  effect.rs  io.rs  layer.rs  mask.rs  mod.rs  project.rs  time.rs  transform.rs
crates/felx-core/src/params/: manifest.rs  mod.rs  preset.rs  values.rs
crates/felx-core/tests/: project_io.rs
crates/felx-media/: Cargo.toml
crates/felx-media/src/: audio.rs  audio_export.rs  decode.rs  encode.rs  error.rs  info.rs  lib.rs  signal_ntsc.rs
crates/felx-media/tests/: decode.rs  encode.rs
crates/felx-render/: Cargo.toml
crates/felx-render/src/: audio_export.rs  blend_pass.rs  clear_pass.rs  compositor.rs  cpu_pass.rs  effect_state.rs  frame_cache.rs  gif_export.rs  lib.rs  mask_pass.rs  matte_pass.rs  renderer.rs  srgb_wrap.rs  texture_io.rs  transform_pass.rs  video_export.rs  walker.rs
crates/felx-render/src/effects/: bloom.rs  cc_toner.rs  crt.rs  crt_persistence.rs  gain.rs  invert.rs  mod.rs  signal.rs  squint_diffusion.rs  vhs.rs
crates/felx-render/tests/: adjustment.rs  blend_modes.rs  bloom.rs  cc_toner.rs  compositor.rs  crt_persistence.rs  determinism.rs  gain.rs  invert.rs  masks.rs  multi_layer.rs  precomp.rs  srgb_wrap.rs  track_matte.rs  transform.rs  video_layer.rs  walker.rs
crates/felx-test/: Cargo.toml
crates/felx-test/src/: lib.rs
crates/felx-test/tests/: failure_paths.rs  smoke.rs
docs/: USER_GUIDE.md
docs/decisions/: 0001-project-file-format.md  0002-ui-framework.md
effects/bloom/: README.md  effect.wgsl  manifest.ron
effects/cc_toner/: README.md  effect.wgsl  manifest.ron
effects/crt/: README.md  effect.wgsl  manifest.ron
effects/crt_persistence/: README.md  effect.wgsl  manifest.ron
effects/gain/: README.md  effect.wgsl  manifest.ron
effects/invert/: README.md  manifest.ron
effects/signal/: README.md  effect.wgsl  manifest.ron
effects/squint_diffusion/: README.md  manifest.ron
effects/vhs/: README.md  effect.wgsl  manifest.ron
presets/: crt_arcade.ron  crt_consumer_trinitron.ron  crt_pc_monitor.ron  vhs_on_crt.ron
