[workspace]
resolver = "2"
members = [
    "crates/felx-core",
    "crates/felx-render",
    "crates/felx-cli",
    "crates/felx-app",
    "crates/felx-test",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["SquintDev <thomas.edward.duffy@gmail.com>"]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1
