[package]
name = "felx-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "wgpu-based render pipeline for analog-felx."
publish = false

[dependencies]
felx-core = { path = "../felx-core" }
tracing = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true }

[dev-dependencies]
felx-test = { path = "../felx-test" }
